# ie0417

./: LICENSE  README.md
tareas/tarea1/: README.md
tareas/tarea2/: README.md
tareas/tarea2/oxygen/: Doxyfile  practicac.cpp
tareas/tarea2/oxygen/docs/html/: doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_func.html  index.html  navtreedata.js  navtreeindex0.js  practicac_8cpp.html  practicac_8cpp.js
tareas/tarea2/oxygen/docs/html/search/: all_1.js  all_2.js  files_0.js  functions_0.js  functions_2.js  searchdata.js
tareas/tarea2/oxygen/docs/latex/: files.tex  practicac_8cpp.tex  refman.tex
tareas/tarea2/sphinx/: array.py
tareas/tarea2/sphinx/source/: conf.py  index.rst
tareas/tarea2/sphinx/source/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
tareas/tarea2/sphinx/source/_build/html/.doctrees/: environment.pickle  index.doctree
tareas/tarea2/sphinx/source/_build/html/_static/: documentation_options.js
tareas/tarea4/: README.md
tareas/tarea5/: README.md  docker-compose.yaml
tareas/tarea5/app/: Dockerfile
tareas/tarea5/app/myapp/: settings.py  urls.py
tareas/tarea5/app/notes/migrations/: 0001_initial.py
tareas/tarea5/app/notes/templates/notes/: note_list.html
tareas/tarea7/: README.md
tareas/tarea7/src/: codigo1  codigo1.cpp  codigo2  codigo2.cpp  codigo3  codigo3.cpp  codigo4  codigo4.cpp  codigo5  codigo5.cpp  codigo5_rev2  codigo5_rev2.cpp
tareas/tarea8/: CMakeLists.txt  README.md  Semilla.cpp  calculator.cpp  calculator.h
tareas/tarea8/Functionmal testing/: CMakeLists.txt  authentication.h  database.h  mock_database.h
tareas/tarea8/Functionmal testing/tests/: CMakeLists.txt  test_authentication.cpp
tareas/tarea8/tests/: CMakeLists.txt  test_calculator.cpp
